force-app/main/default/objects/Live_Engagement__c/Live_Engagement__c.object-meta.xml
<CustomObject>
    <label>Live Engagement</label>
    <nameField>
        <label>Live Engagement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Live Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>