force-app/main/default/objects/Live_Engagement__c/fields/AutoActivate__c.field-meta.xml
<CustomField>
    <fullName>AutoActivate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Activate</label>
    <type>Checkbox</type>
</CustomField>