force-app/main/default/objects/Live_Engagement__c/fields/Bot_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Bot_Developer_Name__c</fullName>
    <label>Bot Developer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>