force-app/main/default/objects/Live_Engagement__c/fields/isNumeric_Response__c.field-meta.xml
<CustomField>
    <fullName>isNumeric_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isNumeric Response</label>
    <type>Checkbox</type>
</CustomField>