force-app/main/default/objects/Live_Engagement__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Outbound Message</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>