force-app/main/default/objects/Live_Engagement__c/fields/Min_Value__c.field-meta.xml
<CustomField>
    <fullName>Min_Value__c</fullName>
    <label>Min Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>