force-app/main/default/objects/Live_Engagement__c/fields/Send_Outbound_Message__c.field-meta.xml
<CustomField>
    <fullName>Send_Outbound_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Outbound Message</label>
    <type>Checkbox</type>
</CustomField>