force-app/main/default/objects/Live_Engagement__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Live Engagements</relationshipLabel>
    <relationshipName>Live_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>