force-app/main/default/objects/Live_Engagement__c/validationRules/Valid_Fastest_Finger.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Fastest_Finger</fullName>
    <active>true</active>
    <errorConditionFormula>AND( TEXT(Type__c) = &#39;Fastest Finger&#39;, OR( 

AND( isNumeric_Response__c ,OR(Min_Value__c &gt; Max_Value__c , 
ISNULL(Min_Value__c), 
ISNULL(Max_Value__c) 
)) , 
ISBLANK( Expected_Value__c ) 
))</errorConditionFormula>
    <errorMessage>Fastest finger must have an expected value, and if numeric, valid range of correct values.</errorMessage>
</ValidationRule>