force-app/main/default/objects/Live_Engagement__c/validationRules/Valid_Poll_Data.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Poll_Data</fullName>
    <active>true</active>
    <errorConditionFormula>AND( TEXT(Type__c) = &#39;Survey/Poll&#39;,OR(Min_Value__c &gt; Max_Value__c , 
ISNULL(Min_Value__c), 
ISNULL(Max_Value__c) 
))</errorConditionFormula>
    <errorMessage>Polls must have a valid minimum value and maximum value (min must be &lt;= max)</errorMessage>
</ValidationRule>