force-app/main/default/objects/Live_Engagement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Bot_Developer_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Session_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>